minor bugfixes for mobile compat; the slider is still a mess on mobile TODO

--- a/public/less/card.less
+++ b/public/less/card.less
@@ -57,6 +57,7 @@ overlay {
 				margin-top: 35px;
 				margin-bottom: 15px;
 				padding: 0px 15px;
+				font-size: 24px;
 			}
 			p {
 				color: #666;
@@ -137,6 +138,10 @@ overlay {
 
             	login {
             		width: 452px; // Have to account for the 48px padding
+            	}
+
+            	h1 {
+            		font-size: 36px;
             	}
 			}
 		}
