--- a/public/less/slider.less
+++ b/public/less/slider.less
@@ -12,7 +12,7 @@ slider {
 		color: #fff;
 		display: table;
 		height: auto;
-		padding: 50px 0px 0px 0px;
+		padding: 0px;
 		position: relative;
 		-webkit-transition: margin-left ease-in-out 0.5s;
 	    transition: margin-left ease-in-out 0.5s;
@@ -32,6 +32,11 @@ slider {
 		        font-size: 20px;
 		        letter-spacing: 1px;
 		        font-weight: 100;
+		    }
+
+		    .container {
+		    	padding-left: 100px;
+		    	padding-right: 100px;
 		    }
 		}
 	}
@@ -89,6 +94,11 @@ slider {
 	            p {
 	                font-size: 28px;
 	            }
+
+	            .container {
+			    	padding-left: 15px;
+			    	padding-right: 15px;
+			    }
 	        }
     	}
 
